# clothoids_wrapper

./: CMakeLists.txt  LICENSE.md  README.md  package.xml
include/clothoids_wrapper/clothoids_main/: Clothoids.hh
include/clothoids_wrapper/clothoids_main/Clothoids/: Biarc.hxx  BiarcList.hxx  Circle.hxx  Clothoid.hxx  ClothoidList.hxx  Line.hxx
include/clothoids_wrapper/clothoids_utils/: Utils.hh
include/clothoids_wrapper/clothoids_utils/Utils/: Utils.hxx
include/clothoids_wrapper/clothoids_utils/Utils/fmt/: chrono.h  color.h  compile.h  format-inl.h  format.cc  format.h  locale.h  os.cc  os.h  ostream.h  posix.h  printf.h  ranges.h
src/clothoids_wrapper/clothoids_main/: AABBtree.cc  Biarc.cc  BiarcList.cc  Circle.cc  Clothoid.cc  ClothoidAsyPlot.cc  ClothoidDistance.cc  ClothoidG2.cc  ClothoidList.cc  Fresnel.cc  G2lib.cc  G2lib_intersect.cc  Line.cc  PolyLine.cc  Triangle2D.cc
src/clothoids_wrapper/clothoids_quartic_roots_flocke/: PolynomialRoots-1-Quadratic.cc  PolynomialRoots-2-Cubic.cc  PolynomialRoots-3-Quartic.cc  PolynomialRoots-Jenkins-Traub.cc  PolynomialRoots-Utils.cc
src/clothoids_wrapper/clothoids_utils/: CPUinfo.cc  Console.cc  Malloc.cc  Numbers.cc  Table.cc  TicToc.cc  Trace.cc  Utils.cc  fmt.cc  rang.cc
